fix about collapse height

--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -29,6 +29,9 @@
     @media screen and (min-width:778px) {
         width: 71.5%;
     }
-    
+    .collapse_content__container{
+        min-height: 20px;
+        height: fit-content;
+    }
 }
 
